Fixed editor feature image overlay bug
refs. https://github.com/TryGhost/Team/issues/3399

The feature image overlay that helps with the contrast for the feature image buttons were covering the alt text input field and button.

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -514,7 +514,7 @@ body[data-user-is-dragging] .gh-editor-feature-image-dropzone {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 100px;
     background-image: linear-gradient(180deg,rgba(0,0,0,.2),transparent 40%,transparent);
     transition: all .1s ease-in;
     opacity: 0;
